[package]
name = "hts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
colored = "2.0.4"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
duration-string = "0.3.0"
regex = "1.4.2"
