[package]
name = "hts"
version = "0.1.0"
edition = "2021"
authors = ["Adam Jensen <adam@acj.sh>"]
description = "Highlight lines of program output based on the latency between them"
license = "MIT"
readme = "README.md"
repository = "https://github.com/acj/hts"
exclude = ["/.github/"]
keywords = ["cli", "command", "profiler"]
categories = ["development-tools::profiling"]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
colored = "3.0.0"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
duration-string = "0.5.2"
regex = "1.4.2"
